--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^2.17.3",
     "vue": "^2.6.12",
     "vue-axios": "^2.1.5",
+    "vue-i18n": "^8.22.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
