--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.6.12",
     "vue-axios": "^2.1.5",
     "vue-i18n": "^8.22.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-touch-events": "^2.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
